--- a/Stile/styles.css
+++ b/Stile/styles.css
@@ -2,3 +2,7 @@ body{
     height: 1px;
     background-image: linear-gradient(to bottom right, rgb(22, 247, 255), rgb(12, 92, 92));
 }
+button#home{
+    height: 100px;
+    width: ;
+}
